Begin splitting out new option

--- a/TOSEM/completeChainmail.tex
+++ b/TOSEM/completeChainmail.tex
@@ -1,40 +1,17 @@
-%
-% SD removed as we said it earlier already
-%%%(\eg  \prg{a1}.\prg{myBank} = \prg{a2}.\prg{myBank}),   %kjx elided
-%%
-%%
-%\Chainmail\ incorporates assertions   about
-%%\susan{the intro mentions viewpoint as well - the two should be consistent}
-%%
-%\textit{permission},
-%% --- objects being accessible from other objects (\eg
-%% $\CanAccess{\x}{\y}$);
-%%
-%\textit{control},
-%% --- the next method to be invoked ($\Calls {\x} {\y} {\m} {\z}$);
-%%
-%%\textit{authority},
-%%  --- about the change of some property (\eg $\Changes{\x.\f}$);
-%%
-%\textit{space}, %--- some property being observable within a subset of
-%%the current state ( $\Using{\A}{S}$);
-%%
-%\textit{time},
-%%
-%and \textit{viewpoint},
-%% --- about some property holding in the future or in the past (\eg $\Future \A$ or $\Past \A$).
-%%
-%as well as   ``classical'' assertions \sophia{would be nice iof we had a better name}
-%about  variables and the heap.
-%%
-In this section we give a brief and informal  overview of some of the most salient features of  
-\Chainmail -- a full exposition appears in Section \ref{sect:assertions}.
+%%% New merged Chainmail alternative
 
+In this section we introduce and formally define
+\Chainmail. \Chainmail assertions (details in appendix \ref{sect:standard}) consist of (pure) expressions \e, comparisons between expressions, classical
+assertions about the contents of heap and stack, the usual logical
+connectives, as well as our holistic concepts.
+In this section we focus on the novel,
+ holistic, features of \Chainmail (permission, control, time, space, and viewpoint),
+as well as our wish to support some form of recursion while keeping the logic of assertions classical.
 
 
 \sdparagraph{Example Configurations} We  will illustrate these features using the  \prg{Bank}/\prg{Account} example from the previous section.
 We   use the runtime configurations $\sigma_1$ and $\sigma_2$ 
-shown in the left and right diagrams in Figure \ref{fig:BankAccountDiagrams}\mrr[, and take a reasonable initial configuration $\sigma_0$]{Added this, and added $\sigma_0\ldots$ to below assertions}. 
+shown in the left and right diagrams in Figure \ref{fig:BankAccountDiagrams}\mrr[, and take a reasonable initial configuration $\sigma_0$]{Added this, and added $\sigma_0\ldots$ to below assertions}.
 %These configurations could arise from the execution of different implementation of the \prg{Bank}/\prg{Account}
 % module.
 In both diagrams the rounded boxes depict objects:  green for those from the 
@@ -60,12 +37,12 @@ Figs.~\ref{fig:BanAccImplV2a} and~\ref{fig:BanAccImplV2b}.
 \begin{center}
 \begin{tabular}{cc}
  \begin{minipage}{0.45\textwidth}
-$\sigma_1$\\
+$\sigma_0\ldots\sigma_1$\\
  \includegraphics[width=\linewidth, trim=55  330 320 60,clip]{diagrams/BankAccount_version_1.pdf}
    \end{minipage}
  &  
  \begin{minipage}{0.45\textwidth}
- $\sigma_2$\\
+ $\sigma_0\ldots\sigma_2$\\
   \includegraphics[width=\linewidth, trim=55  330 320 60,clip]{diagrams/BankAccount_version_2.pdf}
    \end{minipage}
 \end{tabular}
